--- a/Libs/Widgets/Resources/UI/ctkWorkflowGroupBox.ui
+++ b/Libs/Widgets/Resources/UI/ctkWorkflowGroupBox.ui
@@ -20,27 +20,6 @@
    <string>Workflow</string>
   </property>
   <layout class="QVBoxLayout" name="verticalLayout">
-   <property name="margin">
-    <number>0</number>
-   </property>
-   <item>
-    <widget class="ctkCollapsibleButton" name="CollapsibleButton">
-     <property name="sizePolicy">
-      <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
-       <horstretch>0</horstretch>
-       <verstretch>0</verstretch>
-      </sizepolicy>
-     </property>
-     <property name="text">
-      <string>Step title</string>
-     </property>
-     <property name="contentsFrameShape">
-      <enum>QFrame::StyledPanel</enum>
-     </property>
-     <property name="contentsMidLineWidth">
-      <number>0</number>
-     </property>
-     <layout class="QVBoxLayout" name="verticalLayout_2">
       <property name="spacing">
        <number>0</number>
       </property>
@@ -48,7 +27,29 @@
        <number>0</number>
       </property>
       <item>
+    <widget class="QLabel" name="TitleLabel">
+     <property name="font">
+      <font>
+       <weight>75</weight>
+       <bold>true</bold>
+      </font>
+     </property>
+     <property name="text">
+      <string>TextLabel</string>
+     </property>
+    </widget>
+   </item>
+   <item>
        <widget class="QScrollArea" name="ScrollArea">
+     <property name="frameShape">
+      <enum>QFrame::NoFrame</enum>
+     </property>
+     <property name="frameShadow">
+      <enum>QFrame::Plain</enum>
+     </property>
+     <property name="lineWidth">
+      <number>0</number>
+     </property>
         <property name="horizontalScrollBarPolicy">
          <enum>Qt::ScrollBarAlwaysOff</enum>
         </property>
@@ -72,7 +73,7 @@
            <number>0</number>
           </property>
           <item>
-           <widget class="QWidget" name="Widget" native="true">
+           <widget class="QWidget" name="Widget_2" native="true">
             <layout class="QVBoxLayout" name="verticalLayout_4">
              <property name="spacing">
               <number>1</number>
@@ -159,9 +160,6 @@
         </widget>
        </widget>
       </item>
-     </layout>
-    </widget>
-   </item>
    <item>
     <widget class="ctkDynamicSpacer" name="DynamicSpacer">
      <property name="inactiveSizePolicy">
@@ -182,12 +180,6 @@
  </widget>
  <customwidgets>
   <customwidget>
-   <class>ctkCollapsibleButton</class>
-   <extends>QWidget</extends>
-   <header>ctkCollapsibleButton.h</header>
-   <container>1</container>
-  </customwidget>
-  <customwidget>
    <class>ctkDynamicSpacer</class>
    <extends>QWidget</extends>
    <header>ctkDynamicSpacer.h</header>
@@ -199,22 +191,5 @@
   </customwidget>
  </customwidgets>
  <resources/>
- <connections>
-  <connection>
-   <sender>CollapsibleButton</sender>
-   <signal>toggled(bool)</signal>
-   <receiver>DynamicSpacer</receiver>
-   <slot>setActive(bool)</slot>
-   <hints>
-    <hint type="sourcelabel">
-     <x>260</x>
-     <y>259</y>
-    </hint>
-    <hint type="destinationlabel">
-     <x>260</x>
-     <y>524</y>
-    </hint>
-   </hints>
-  </connection>
- </connections>
+ <connections/>
 </ui>
